Change MATERI_QUERY to use LIKE for filtering

--- a/materi.html
+++ b/materi.html
@@ -1317,7 +1317,7 @@
         // URL Google Sheets untuk materi (gid=2053759199)
         const MATERI_SHEET_ID = "1_c6-TdEb2MogFIKksz-Zw_kbL3vDTCsGp7UL6V4qfr0";
         const MATERI_GID = "2053759199";
-        const MATERI_QUERY = "SELECT A,B,C,D,E,F,G,H,I where J='XII-2'";
+        const MATERI_QUERY = "SELECT A,B,C,D,E,F,G,H,I where J LIKE 'XII%'";
 
         // URL Google Sheets untuk penilaian (gid=757145188)
         const PENILAIAN_SHEET_ID = "1_c6-TdEb2MogFIKksz-Zw_kbL3vDTCsGp7UL6V4qfr0";
