--- a/unggah.html
+++ b/unggah.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <title>📤 Upload File ke Folder tugas</title>
+  <title>📤 Upload File ke Folder x</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 500px; margin: 20px auto; padding: 20px; }
     .card { background: #f8f9fa; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -62,7 +62,7 @@
 
 <script>
 // GANTI URL INI DENGAN URL DEPLOYMENT ANDA
-const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyK3utd7kyb2i_DZLV2UaAFIDiYuGsPp_-9aSGJS--GtHekFxRcK8EDb2i3OZOtY3L-/exec';
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwp1CBj9ncba_aLYKmMsto7K3dk8fZo7W3m88VyYciP47WWhsiMZDpIIGN01jfZXq3U/exec';
 
 let selectedFile = null;
 
