Update description in brand text section

--- a/media/index.html
+++ b/media/index.html
@@ -192,7 +192,7 @@
     <img src="https://drive.google.com/thumbnail?id=1jjuiSRnNEex2-87cfM1kUiZDs7zucwKr&sz=w200" alt="Logo Sekolah" class="brand-logo">
     <div class="brand-text">
       <h1>SPATRA MEDIA</h1>
-      <p>Ekstrakurikuler Informatika SMA N 1 Wiradesa Pekalongan</p>
+      <p>Ekstrakurikuler Informatika SMA N 1 Wiradesa</p>
     </div>
   </div>
 
