--- a/pai/oneday/index.html
+++ b/pai/oneday/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Sistem Laporan Harian Santri</title>
+    <title>Pesantren Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     
@@ -106,8 +106,8 @@
         <!-- FORM CARD -->
         <div class="card form-card" id="formCard">
             <header>
-                <h1><i class="fas fa-book-quran"></i> Laporan Harian Santri</h1>
-                <p class="subtitle">Input Amal Harian & Setoran Al-Qur'an</p>
+                <h1><i class="fas fa-book-quran"></i> Laporan Ramadhan Siswa</h1>
+                <p class="subtitle">SMA Negeri 1 Wiradesa Pekalongan</p>
             </header>
 
             <!-- Identitas -->
