--- a/pai/oneday/index.html
+++ b/pai/oneday/index.html
@@ -150,7 +150,7 @@
             <hr style="border:0; border-top:1px dashed #ddd; margin: 20px 0;">
             
             <div class="input-group">
-                <label>Shalat Wajib (Tandai yang sudah dikerjakan)</label>
+                <label>Shalat Wajib (Tandai yang sudah dikerjakan, sejak magrib kemarin sd subuh tadi pagi)</label>
                 <div class="scroll-check-container grid-2" id="containerShalatWajib"></div>
             </div>
 
@@ -264,7 +264,7 @@
 **JUZ 30#An-Naba 1-40|An-Naaziaot 1-46|Abasa 1-42|At-Takwiir 1-29|Al-Infithaar 1-19|Al-Muthaffifiin 1-36|Al-Insyiqaaq 1-25|Al-Buruuj 1-22|Ath-Thaari86-17|Al-Alaa 1-19|Al-Ghaasyiy88-26|Al-Fajr 1-30|Al-Balad 1-20|Asy-Syams 1-15|Al-Lail 1-21|Adh-Dhuhaa 1-11|Al-Insyirah 1-8|At-Tin 1-8|Al-Alac 1-19|Al-Qadr 1-5|Al-Bayyinah 1-8|Az-Zalzalah 1-8|Al-Aadiyaot 1-11|Al-Qaariah 1-11|At-Takaatsur 1-8|Al-Ashr 1-3|Al-Humazah 1-9|Al-Fiil 1-5|Quraisy 1-4|Al-Maauon 1-7|Al-Kautsar 1-3|Al-Kaafiruun 1-6|An-Nashr 1-3|Al-Lahab 1-5|Al-Ikhlash 1-4|Al-Falaq 1-5|An-Naas 1-6`;
 
         const shalatWajibList = ["Subuh", "Dzuhur", "Ashar", "Maghrib", "Isya"];
-        const shalatSunnahList = ["Dhuha", "Tahajjud", "Witir", "Rawatib", "Sunnah Mutlaq"];
+        const shalatSunnahList = ["Dhuha", "Tahajjud", "Witir", "Rawatib","Tarawih","Sunnah Mutlaq"];
         const juz30List = ["An-Naba", "An-Nazi'at", "Abasa", "At-Takwir", "Al-Infitar", "Al-Mutaffifin", "Al-Insyiqaq", "Al-Buruj", "At-Tariq", "Al-A'la", "Al-Ghasyiyah", "Al-Fajr", "Al-Balad", "Asy-Syams", "Al-Lail", "Ad-Duha", "Al-Insyirah", "At-Tin", "Al-Alac", "Al-Qadr", "Al-Bayyinah", "Az-Zalzalah", "Al-'Adiyat", "Al-Qari'ah", "At-Takatsur", "Al-Asr", "Al-Humazah", "Al-Fil", "Quraisy", "Al-Ma'un", "Al-Kautsar", "Al-Kafirun", "An-Nasr", "Al-Lahab", "Al-Ikhlas", "Al-Falaq", "An-Nas"];
 
         const suratMapping = {
