Update label for Shalat Wajib section

--- a/pai/oneday/index.html
+++ b/pai/oneday/index.html
@@ -150,7 +150,7 @@
             <hr style="border:0; border-top:1px dashed #ddd; margin: 20px 0;">
             
             <div class="input-group">
-                <label>Shalat Wajib (Tandai yang sudah dikerjakan, sejak magrib kemarin sd subuh tadi pagi)</label>
+                <label>Shalat Wajib (Tandai yang sudah dikerjakan, sejak Dzuhur kemarin sd subuh tadi pagi)</label>
                 <div class="scroll-check-container grid-2" id="containerShalatWajib"></div>
             </div>
 
